--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -5769,7 +5769,7 @@ textarea {
     background-color: #eee;
     color: #333;
 }
-.custom-banner p {
+.bx-caption p {
   margin-top: 0px;
-  line-height: 1.3px;
+  line-height: 1px;
 }
