--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -33,7 +33,7 @@
                         <h4 class="lg text-uppercase">HEALTHY FOOD IS FUTURE</h4>
                         <h6 class="text-uppercase">Rind-Reisnudelsuppe (Vietnam's Nationalgericht)</h6>
                         <h6 class="text-uppercase">Phở Bò / Main dish with Rice noodles soups !!!</h6>
-                        <p class="text-justify"><%= t(:about_content_1) %></p>
+                        <p class="text-justify style-line"><%= t(:about_content_1) %></p>
                         <p class="style-line"><%= t(:about_content_2) %></p>
                     </div>
                 </div>
