--- a/app/views/layouts/frontend.html.erb
+++ b/app/views/layouts/frontend.html.erb
@@ -28,6 +28,7 @@
     <%= stylesheet_link_tag '/frontend/css/style.css?v=1' %>
     <%= stylesheet_link_tag '/frontend/stylesheets/custom.css?v=2' %>
     <%= stylesheet_link_tag '/frontend/css/jquery.bxslider.css' %>
+    <%= stylesheet_link_tag '/frontend/css/custom.css' %>
     
     <!--[if lt IE 9]>
         <%= javascript_include_tag 'http://html5shim.googlecode.com/svn/trunk/html5.js' %>
