--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -18,8 +18,9 @@
             
             <div class="block-first">
                 <div class="row">
-                    <div class="col-md-12 text-center">
-                        <%= link_to image_tag("/frontend/images/flags/icon-uk.png"), home_path(locale: "en") %>  <%= link_to image_tag("/frontend/images/flags/icon-german.png"), home_path(locale: "de") %>
+                    <div class="col-md-12 text-center hover-1">
+                        <p><small>Choose your language</small></p>
+                        <figure><%= link_to image_tag("/frontend/images/flags/icon-uk.png"), home_path(locale: "en") %>  <%= link_to image_tag("/frontend/images/flags/icon-german.png"), home_path(locale: "de") %></figure>
                         <h4 class="font-welcome">Take Away - Asia Buffet - Catering - Lieferung</h4>
                     </div>
                 </div>
