--- a/public/frontend/css/custom.css
+++ b/public/frontend/css/custom.css
@@ -5,3 +5,14 @@
 .style-line {
   line-height: 1.8em !important;
 }
+/* Zoom In #1 */
+.hover01 figure img {
+	-webkit-transform: scale(1);
+	transform: scale(1);
+	-webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
+}
+.hover01 figure:hover img {
+	-webkit-transform: scale(1.3);
+	transform: scale(1.3);
+}
