--- a/app/views/layouts/frontend.html.erb
+++ b/app/views/layouts/frontend.html.erb
@@ -12,6 +12,7 @@
     <%= stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Playfair+Display:400,400italic' %>
     <%= stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Montserrat' %>
     <%= stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Quattrocento+Sans:400,400italic,700,700italic' %>
+    <%= stylesheet_link_tag 'https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' %>
 
     <!-- CSS LIBRARY -->
     <%= stylesheet_link_tag '/frontend/css/lib/bootstrap.min.css' %>
