--- a/app/views/customer_mailer/reservation_email.html.erb
+++ b/app/views/customer_mailer/reservation_email.html.erb
@@ -16,6 +16,9 @@
       Phone: <%= @customer_reservation.customer_phone %>
     </p>
     <p>
+      Number: <%= @customer_reservation.number %>
+    </p>
+    <p>
       Note: <%= @customer_reservation.note %>
     </p>
     <p>
