--- a/app/views/admin/customer_reservations/index.html.erb
+++ b/app/views/admin/customer_reservations/index.html.erb
@@ -83,7 +83,7 @@
                                 <tr>
                                     <td>
                                         <%= link_to item.customer_name, [:admin, item] %><br>
-                                        Number: <%= item.number %>
+                                        Number: <%= item.customer_number %>
                                     </td>
                                     <td><%= item.customer_phone %></td>
                                     <td><%= item.customer_email %></td>
