--- a/app/views/customer_mailer/reservation_email.html.erb
+++ b/app/views/customer_mailer/reservation_email.html.erb
@@ -16,7 +16,7 @@
       Phone: <%= @customer_reservation.customer_phone %>
     </p>
     <p>
-      Number: <%= @customer_reservation.number %>
+      Number: <%= @customer_reservation.customer_number %>
     </p>
     <p>
       Note: <%= @customer_reservation.note %>
