--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -83,6 +83,7 @@
                             <p class="xmd"><%= @info.address %></p>
                             <p class="xmd"><%= @info.email %></p>
                             <p class="xmd"><%= @info.phone %></p>
+                            <p class="xmd">Facebook: <%= link_to "Phở Sài Gòn 52", "https://www.facebook.com/Phosaigon52/?fref=ts", target: "_blank" %></p>
                         </div>
                     </div>
                 </li>
