--- a/app/views/admin/main/_navbar.html.erb
+++ b/app/views/admin/main/_navbar.html.erb
@@ -25,7 +25,7 @@
 
             <li class="dropdown dropdown-user">
                 <a class="dropdown-toggle" data-toggle="dropdown">
-                    <img src="/backend/assets/images/logo-PhoSG52.png" alt="">
+                    <img src="/backend/assets/images/logo-PhoSG52.png?v=5" alt="">
                     <span>Manager</span>
                     <i class="caret"></i>
                 </a>
