--- a/app/views/admin/main/_user_menu.html.erb
+++ b/app/views/admin/main/_user_menu.html.erb
@@ -1,11 +1,11 @@
 <div class="sidebar-user">
     <div class="category-content">
         <div class="media">
-            <a href="#" class="media-left"><img src="/backend/assets/images/logo-PhoSG52.png" class="img-circle img-sm" alt=""></a>
+            <a href="#" class="media-left"><img src="/backend/assets/images/logo-PhoSG52.png?v=5" class="img-circle img-sm" alt=""></a>
             <div class="media-body">
                 <span class="media-heading text-semibold">Manager - Phở Sài Gòn 52</span>
                 <div class="text-size-mini text-muted">
-                    <i class="icon-pin text-size-small"></i> &nbsp;Zürcherstrasse 91, 8952 Schlieren, Switzerland
+                    <i class="icon-pin text-size-small"></i> &nbsp;3rd Floor, Bahnstrasse 60, 8105, Regensdorf
                 </div>
             </div>
         </div>
