--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -36,7 +36,7 @@
                             </div>
                             <p class="xmd"><%=t :mon_fri %>: <%= @info.hour_en %></p>
                             <p class="xmd"><%=t :sat %>: <%= @info.hour_de %>; <%=t :sun %>: <%=t :close %></p>
-                            <p class="xmd"><%= @info.address %></p>
+                            <p class="xmd"><%=t :address_val %></p>
                             <p class="xmd"><%= @info.email %> | Facebook: <%= link_to "Pho Sai Gon 52", "https://www.facebook.com/Phosaigon52/?fref=ts", target: "_blank" %></p>
                             <p class="xmd"><%= @info.phone %></p>
                         </div>
@@ -58,7 +58,7 @@
                             </div>
                             <p class="xmd"><%=t :mon_fri %>: <%= @info.hour_en %></p>
                             <p class="xmd"><%=t :sat %>: <%= @info.hour_de %>; <%=t :sun %>: <%=t :close %></p>
-                            <p class="xmd"><%= @info.address %></p>
+                            <p class="xmd"><%=t :address_val %></p>
                             <p class="xmd"><%= @info.email %> | Facebook: <%= link_to "Pho Sai Gon 52", "https://www.facebook.com/Phosaigon52/?fref=ts", target: "_blank" %></p>
                             <p class="xmd"><%= @info.phone %></p>
                         </div>
@@ -80,7 +80,7 @@
                             </div>
                             <p class="xmd"><%=t :mon_fri %>: <%= @info.hour_en %></p>
                             <p class="xmd"><%=t :sat %>: <%= @info.hour_de %>; <%=t :sun %>: <%=t :close %></p>
-                            <p class="xmd"><%= @info.address %></p>
+                            <p class="xmd"><%=t :address_val %></p>
                             <p class="xmd"><%= @info.email %> | Facebook: <%= link_to "Pho Sai Gon 52", "https://www.facebook.com/Phosaigon52/?fref=ts", target: "_blank" %></p>
                             <p class="xmd"><%= @info.phone %></p>
                         </div>
