--- a/app/views/info/index.html.erb
+++ b/app/views/info/index.html.erb
@@ -31,11 +31,10 @@
                                 <hr class="_hr">
                                 <address class="address-wrap">
                                     <span class="phone">PHỞ SÀI GÒN 52</span>
-                                    <span class="address">Zürcherstrasse 91, 8952 Schlieren, Switzerland</span>
+                                    <span class="address">Bahnstraße 60, 8105 Regensdorf, 3rd floor, Switzerland</span>
                                     <span class="address">Email: phosaigon52@gmail.com</span>
                                     <span class="address">Website: phosaigon52.ch</span>
-                                    <span class="address">Telefon: 043 495 00 22</span>
-                                    <span class="address">Fax: 043 495 00 22</span>
+                                    <span class="address">Telefon: +41 44 536 49 76 & +41 78 420 09 49</span>
                                 </address>
                             </div>
 
