--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -12,7 +12,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="image-wrap text-center">
-                            <img src="/frontend/images/logo-PhoSG52.png" />
+                            <img src="/frontend/images/logo-PhoSG52.png?v=5" />
                         </div>
                     </div>
                 </div>
@@ -38,8 +38,10 @@
                                     <li><img src="<%= banner.image_url.banner %>" title="
                                     <strong class='title'><%= banner.title %></strong><br/>
                                     <p><%= banner.description.html_safe %></p>
-                                    Reservierung / Reservation: Phosaigon52 | Zürcherstrasse 91, 8952 Schlieren<br/>
-                                    <strong>Telefon:</strong> 043 495 00 22 <br> <strong>E-Mail:</strong> <a style='color:#fff' href='mailto:phosaigon52@gmail.com'>phosaigon52@gmail.com</a> <br> <strong>Website:</strong> www.phosaigon52.ch  | Facebook: <a style='color:#fff' target='_blank' href='https://www.facebook.com/Phosaigon52'>Pho Sai Gon 52</a><br/>
+                                  <strong>Reservierung</strong>: Phosaigon52, 3. Stock, Bahnstrasse 60, 8105, Regensdorf<br/>
+<strong>Reservation:</strong> Phosaigon52, 3rd Floor, Bahnstrasse 60, 8105, Regensdorf<br/>
+                                    <strong>Telefon/Phone:</strong> +41 44 536 49 76 & +41 78 420 09 49
+ <br> <strong>E-Mail:</strong> <a style='color:#fff' href='mailto:phosaigon52@gmail.com'>phosaigon52@gmail.com</a> | <strong>Website:</strong> www.phosaigon52.ch  | Facebook: <a style='color:#fff' target='_blank' href='https://www.facebook.com/Phosaigon52'>Pho Sai Gon 52</a><br/>
                                     "/>
                                     </li>
                                 <% end %>
