--- a/app/views/layouts/backend.html.erb
+++ b/app/views/layouts/backend.html.erb
@@ -24,7 +24,7 @@
 	<!-- /js and meta for rails -->
 	
 	<!-- Favicons -->
-    <%= favicon_link_tag '/backend/assets/images/logo-PhoSG52.png', rel: 'icon', type: 'image/png' %>
+    <%= favicon_link_tag '/backend/assets/images/logo-PhoSG52.png?v=5', rel: 'icon', type: 'image/png' %>
 
 	<!-- Core JS files -->
     <%= javascript_include_tag '/backend/assets/js/plugins/loaders/pace.min.js' %>
