--- a/app/views/layouts/frontend.html.erb
+++ b/app/views/layouts/frontend.html.erb
@@ -23,7 +23,7 @@
     <%= stylesheet_link_tag '/frontend/css/awe-fonts.css' %>
     
     <!-- Favicons -->
-    <%= favicon_link_tag '/frontend/images/logo-PhoSG52.png', rel: 'icon', type: 'image/png' %>
+    <%= favicon_link_tag '/frontend/images/logo-PhoSG52.png?v=5', rel: 'icon', type: 'image/png' %>
 
     <!-- PAGE STYLE -->
     <%= stylesheet_link_tag '/frontend/css/style.css?v=2' %>
